--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       </tr>
     </tbody>
   </table>
+  <em>This is a list of my current projects: <a href="works-in-progress.html">Projects</a></em>
   <em>Need to contact me? <a href="contact-info.html">Click Here.</a></em>
   <em>Some other things I <a href="hobbies.html">enjoy.</a></em>
   <hr />
